#1101 Improvements resulting from the review
new Long(), new Boolean() etc.. replace for Long.valueOf